--- a/Advanced/appsettings.json
+++ b/Advanced/appsettings.json
@@ -11,5 +11,6 @@
   "ConnectionStrings": {
     "PeopleConnection": "Data Source=localhost,1433;Initial Catalog=People;User ID=sa;Password=Passw0rd%;MultipleActiveResultSets=true",
     "IdentityConnection": "Data Source=localhost,1433;Initial Catalog=Identity;User ID=sa;Password=Passw0rd%;MultipleActiveResultSets=true"
-  }
+  },
+  "jwtSecret": "step_it_academy_secret"
 }
